--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,6 +34,8 @@ body {
     rgb(var(--background-end-rgb))
   );
   min-height: 100vh;
+  max-width: 1400px;
+  margin: 0 auto;
 }
 
 .text-gradient {
